fix content overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -78,14 +78,6 @@ a:visited {
     color: var(--color-text-default);
 }
 
-a.license {
-    text-decoration:none;
-}
-
-object.icon-cc-by path {
-    fill: var(--color-text-default);
-}
-
 .line-through{
     font-weight: normal;
     text-decoration:line-through;
@@ -136,14 +128,14 @@ div.pad {
 
 p.image-cell-caption {
     margin-top: 0;
-    /*padding-left: 0.5rem;*/
-    /*padding-right: 0.5rem;*/
     line-height: 125%;
 }
 
 p.image-cell-exif {
     margin: 0;
-    /*padding-left: 0.5rem;*/
-    /*padding-right: 0.5rem;*/
     font-size: xx-small;
+}
+
+.content {
+    overflow-x: auto;
 }
